# my_bittle

./: .gitignore  Dockerfile  README.md  dev_README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: pipeline.yaml
examples/: api_ex.py
my_bittle/: bittle_keyboard_control.py  bittle_serial_controller.py  keyboard_listener.py
random_examples/: come_to_me.py  setup_wlan.py  video_stream.py
tests/: test_bittle_serial_controller.py
tests/my_bittle/: test_bittle_serial_controller.py
