[project]
name = "my_bittle"
version = "0.0.1"
authors = [
    { name = "MZandtheRaspberryPi", email = "mzandtheraspberrypi[at]gmail.com" },
]
description = "A small package to enable keyboard control of the Bittle robot dog."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MZandtheRaspberryPi/my_bittle"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"